--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "file-loader": "^6.2.0",
+    "media-queries-in-react": "^0.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1"
