--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "media-queries-in-react": "^0.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
