--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "express": "^4.19.2",
     "file-loader": "^6.2.0",
     "media-queries-in-react": "^0.1.11",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
