--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
     "media-queries-in-react": "^0.1.11",
-    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
