--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "format": "prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
     "media-queries-in-react": "^0.1.11",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
